--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ timezone: ''
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project' posts/:title/
-url: ${HEXO_URL}
+url: /
 permalink: posts/:title/
 permalink_defaults:
 pretty_urls:
