--- a/_config.kratos-rebirth.yml
+++ b/_config.kratos-rebirth.yml
@@ -212,7 +212,7 @@ additional_injections:
     <link rel="stylesheet" href="/others/mobile-hero.css"/>
     
   footer: |
-    <meting-js server="netease" type="playlist" id="60198" fixed="true"></meting-js>
+    <meting-js server="netease" type="playlist" id="3778678" fixed="true"></meting-js>
     
   after_footer: |
     <script src="https://cdn.jsdelivr.net/npm/twikoo@1.6.39/dist/twikoo.all.min.js"></script>
