--- a/_config.kratos-rebirth.yml
+++ b/_config.kratos-rebirth.yml
@@ -224,6 +224,7 @@ additional_injections:
     <script src="https://unpkg.com/aplayer@1.10.1/dist/APlayer.min.js"></script>
     <script src="https://unpkg.com/meting@2.0.1/dist/Meting.min.js"></script>
     <script src="/effects/leave-event.js"></script>
+    <script src="/others/random-post-cover.js"></script>
    
     
 
