--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 # Site
 title: 'drfengyu : WebSource'
-subtitle: '一个在线的资源导航平台'
+subtitle: '风凌的在线资源导航平台'
 description: '世界充满了学习.'
 keywords: 
 - hexo
