--- a/_config.kratos-rebirth.yml
+++ b/_config.kratos-rebirth.yml
@@ -238,7 +238,7 @@ additional_injections:
     <link rel="stylesheet" href="https://unpkg.com/aplayer@1.10.1/dist/APlayer.min.css">
     <link rel="stylesheet" href="/widgets/aplayer.css">
     <link rel="stylesheet" href="/others/mobile-hero.css"/>
-    
+    <meta name="referrer" content="never">
   footer: |
     <meting-js server="netease" type="playlist" id="3778678" fixed="true"></meting-js>
     
